--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
             // Update score displays
             hitsDisplay.textContent = `#HITS: ${hits}`;
-            missesDisplay.textContent = #MISSES: ${misses}`;
+            missesDisplay.textContent = '#MISSES: ${misses}`;
         }
 
         // Move spaceship left and right
