--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
             game.textContent = output;
 
             // Update score displays
-            hitsDisplay.textContent = `#HITS: ${hits}`;
-            missesDisplay.textContent = '#MISSES: ${misses}`;
+            hitsDisplay.textContent = `NR HITS: ${hits}`;
+            missesDisplay.textContent = 'MISSES: ${misses}`;
         }
 
         // Move spaceship left and right
