--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             game.textContent = output;
 
             // Update score displays
-            hitsDisplay.textContent = `NR HITS: ${hits}`;
+            hitsDisplay.textContent = `H I T S: ${hits}`;
             missesDisplay.textContent = 'MISSES: ${misses}`;
         }
 
