--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
         const height = 20; // game area height
 
         const spaceshipString = "<=!=>";
-        let spaceshipPos = Math.floor(width / 2) - 2; // Center the spaceship under bullets
+        const spaceshipCenter = 2; // The center position of the spaceship (where `!` is located)
+        let spaceshipPos = Math.floor(width / 2) - spaceshipCenter; // Center the spaceship under bullets
         let bullets = [];
         let enemies = [];
         let hits = 0;
@@ -65,7 +66,7 @@
                 for (let x = 0; x < width; x++) {
                     if (y === height - 1 && x === spaceshipPos) {
                         line += spaceshipString;
-                        x += spaceshipString.length - 1; // Skip rest of spaceship width
+                        x += spaceshipString.length - 1; // Skip the rest of the spaceship width
                     } else if (bullets.some(b => b.x === x && b.y === y)) {
                         line += "o"; // bullet
                     } else if (enemies.some(e => e.x === x && e.y === y)) {
@@ -85,12 +86,12 @@
 
         // Move spaceship left and right
         document.addEventListener("keydown", e => {
-            if (e.key === "ArrowLeft" && spaceshipPos > 0) {
-                spaceshipPos--; // Move left
-            } else if (e.key === "ArrowRight" && spaceshipPos < width - spaceshipString.length) {
-                spaceshipPos++; // Move right
+            if (e.key === "ArrowLeft" && spaceshipPos > -spaceshipCenter) {
+                spaceshipPos--; // Move left, allowing it to go slightly out of bounds
+            } else if (e.key === "ArrowRight" && spaceshipPos < width - spaceshipString.length + spaceshipCenter) {
+                spaceshipPos++; // Move right, allowing slight overlap
             } else if (e.key === " ") {
-                bullets.push({ x: spaceshipPos + 2, y: height - 2 }); // Fire bullet from center
+                bullets.push({ x: spaceshipPos + spaceshipCenter, y: height - 2 }); // Fire bullet from center `!`
             }
             render();
         });
