--- a/index.html
+++ b/index.html
@@ -65,8 +65,14 @@
                 let line = "";
                 for (let x = 0; x < width; x++) {
                     // Render the spaceship on the bottom row at its position
-                    if (y === height - 1 && x >= spaceshipPos && x < spaceshipPos + spaceshipString.length) {
-                        line += spaceshipString[x - spaceshipPos];
+                    if (y === height - 1 && x === spaceshipPos + spaceshipCenter) {
+                        line += "!";
+                    } else if (y === height - 1 && x === spaceshipPos) {
+                        line += "<=";
+                        x++;
+                    } else if (y === height - 1 && x === spaceshipPos + 3) {
+                        line += "=>";
+                        x++;
                     } else if (bullets.some(b => b.x === x && b.y === y)) {
                         line += "o"; // bullet
                     } else if (enemies.some(e => e.x === x && e.y === y)) {
@@ -80,16 +86,16 @@
             game.textContent = output;
 
             // Update score displays
-            hitsDisplay.textContent = `H I T S: ${hits}`;
+            hitsDisplay.textContent = `HITS: ${hits}`;
             missesDisplay.textContent = `MISSES: ${misses}`;
         }
 
         // Move spaceship left and right
         document.addEventListener("keydown", e => {
-            if (e.key === "ArrowLeft" && spaceshipPos > 0) {
-                spaceshipPos--; // Move left, restricting it within bounds
-            } else if (e.key === "ArrowRight" && spaceshipPos < width - spaceshipString.length) {
-                spaceshipPos++; // Move right, restricting it within bounds
+            if (e.key === "ArrowLeft" && spaceshipPos > -spaceshipCenter) {
+                spaceshipPos--; // Move left, allowing the spaceship's center to go to the edge
+            } else if (e.key === "ArrowRight" && spaceshipPos < width - spaceshipCenter - 2) {
+                spaceshipPos++; // Move right, allowing the spaceship's center to go to the edge
             } else if (e.key === " ") {
                 bullets.push({ x: spaceshipPos + spaceshipCenter, y: height - 2 }); // Fire bullet from center `!`
             }
@@ -108,7 +114,7 @@
 
             // Move enemies at a slower rate based on counter
             enemyMoveCounter++;
-            if ( enemyMoveCounter >= enemySpeed) {
+            if (enemyMoveCounter >= enemySpeed) {
                 enemies = enemies.map(e => ({ x: e.x, y: e.y + 1 }));
                 enemyMoveCounter = 0; // Reset the counter after moving enemies
             }
