--- a/index.html
+++ b/index.html
@@ -1,1 +1,37 @@
-TEST
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Basic JS Games</title>
+    <style>
+        body {
+            background-color: black;
+            color: lime;
+            font-family: monospace;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+            flex-direction: column;
+        }
+        h1 {
+            font-size: 2em;
+        }
+        a {
+            color: lime;
+            text-decoration: none;
+            font-size: 1.5em;
+            margin-top: 20px;
+        }
+        a:hover {
+            text-decoration: underline;
+        }
+    </style>
+</head>
+<body>
+    <h1>Basic JS Games</h1>
+    <a href="spaceInvaders.html">Play Space Invaders</a>
+</body>
+</html>
