--- a/index.html
+++ b/index.html
@@ -32,6 +32,6 @@
 </head>
 <body>
     <h1>Basic JS Games</h1>
-    <a href="spaceInvaders.html">Play Space Invaders</a>
+    <a href="proj/games/invaders.html">Play Space Invaders</a>
 </body>
 </html>
