--- a/index.html
+++ b/index.html
@@ -33,5 +33,6 @@
 <body>
     <h1>Basic JS Games</h1>
     <a href="proj/games/invaders.html">Play Space Invaders</a>
+     <a href="proj/games/invaders.html">Play Pong</a>
 </body>
 </html>
