--- a/index.html
+++ b/index.html
@@ -34,5 +34,6 @@
     <h1>Basic JS Games</h1>
     <a href="proj/games/invaders.html">Play Space Invaders</a>
      <a href="proj/games/invaders.html">Play Pong</a>
+     <a href="proj/games/pool.html">Play Pool</a>
 </body>
 </html>
