--- a/index.html
+++ b/index.html
@@ -32,8 +32,7 @@
 </head>
 <body>
     <h1>Basic JS Games</h1>
-    <a href="proj/games/invaders.html">Play Space Invaders</a>
-     <a href="proj/games/invaders.html">Play Pong</a>
-     <a href="proj/games/pool.html">Play Pool</a>
+    <h1> Random Numbers Generator</h1>
+     
 </body>
 </html>
