--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -18,12 +17,13 @@
         }
         h1 {
             font-size: 2em;
+            margin: 10px 0;
         }
         a {
             color: lime;
             text-decoration: none;
             font-size: 1.5em;
-            margin-top: 20px;
+            margin-top: 10px;
         }
         a:hover {
             text-decoration: underline;
@@ -32,7 +32,11 @@
 </head>
 <body>
     <h1>Basic JS Games</h1>
-    <h1> Random Numbers Generator</h1>
-     
+    <a href="proj/games/invaders.html">Play Space Invaders</a>
+    <a href="proj/games/pong.html">Play Pong</a>
+    <a href="proj/games/pool.html">Play Pool</a>
+
+    <h1>Random Numbers Generator</h1>
+    <a href="proj/numbergen.html">Random Number Generator</a>
 </body>
 </html>
