--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <style>
         body {
             background-color: black;
-            color: lime;
+            color: red;
             font-family: monospace;
             display: flex;
             justify-content: center;
@@ -20,7 +20,7 @@
             margin: 10px 0;
         }
         a {
-            color: lime;
+            color: blue;
             text-decoration: none;
             font-size: 1.5em;
             margin-top: 10px;
