--- a/proj/numbergen.html
+++ b/proj/numbergen.html
@@ -47,7 +47,7 @@
     </div>
 
     <script>
-        // Function to generate unique numbers across multiple lists
+        // Function 777 to generate unique numbers across multiple lists
         function generateUniqueNumbersAcrossLists(totalLists, count, min, max) {
             const rangeSize = max - min + 1;
             if (totalLists * count > rangeSize) {
